fix style: books alignements

--- a/frontend/src/containers/Books/style.scss
+++ b/frontend/src/containers/Books/style.scss
@@ -1,5 +1,6 @@
 .books {
   display: flex;
+  justify-content: center;
   flex: 1;
   width: 100%;
   flex-wrap: wrap;
